--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="check-carousel">
         <div class="carousel-container">
           <div class="carousel">
-            <img src="/img/1.jpg" alt="Image 1" />
+            <img src="../img/1.jpg" alt="Image 1" />
             <img src="/img/9.jpg" alt="Image 2" />
             <img src="/img/3.jpg" alt="Image 2" />
             <img src="/img/8.jpg" alt="Image 2" />
