--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <img src="/img/5.jpg" alt="Image 2" />
             <img src="/img/6.jpg" alt="Image 2" />
             <img src="/img/7.jpg" alt="Image 2" />
+            <img src="/img/Address.png" alt="address" />
 
             <!-- Add more images as needed -->
           </div>
