--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="backG-image"></div>
       <div class="recent_video"></div>
 
-      <script src="/index.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
   <footer>
