updated the logo import link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav_container">
       <div id="site_logo">
-        <img height="70px" width="80px" src="/img/B&B logo.png" alt="LogoT" />
+        <img height="70px" width="80px" src="img/B&B logo.png" alt="LogoT" />
       </div>
       <div class="tab_menu">
         <ul>
