updated the index file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="">Services</a></li>
           <li><a href="">Media</a></li>
           <li><a href="">Booking</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -47,7 +47,7 @@
             <img
               height="70px"
               width="80px"
-              src="/img/B&B logo.png"
+              src="img/B&B logo.png"
               alt="LogoT"
             />
           </div>
