updated the contact.html page

--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact US</title>
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/contact.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <div class="nav_container">
       <div id="site_logo">
-        <img height="70px" width="80px" src="/img/B&B logo.png" alt="LogoT" />
+        <img height="70px" width="80px" src="img/B&B logo.png" alt="LogoT" />
       </div>
       <div class="tab_menu">
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="">Services</a></li>
           <li><a href="">Media</a></li>
           <li><a href="">Booking</a></li>
@@ -26,13 +26,13 @@
       <div class="check-carousel">
         <div class="carousel-container">
           <div class="carousel">
-            <img src="/img/1.jpg" alt="Image 1" />
-            <img src="/img/9.jpg" alt="Image 2" />
-            <img src="/img/3.jpg" alt="Image 2" />
-            <img src="/img/8.jpg" alt="Image 2" />
-            <img src="/img/5.jpg" alt="Image 2" />
-            <img src="/img/6.jpg" alt="Image 2" />
-            <img src="/img/7.jpg" alt="Image 2" />
+            <img src="img/1.jpg" alt="Image 1" />
+            <img src="img/9.jpg" alt="Image 2" />
+            <img src="img/3.jpg" alt="Image 2" />
+            <img src="img/8.jpg" alt="Image 2" />
+            <img src="img/5.jpg" alt="Image 2" />
+            <img src="img/6.jpg" alt="Image 2" />
+            <img src="img/7.jpg" alt="Image 2" />
 
             <!-- Add more images as needed -->
           </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="Contact-method">
         <div class="Address">
-          <img src="/img/Address.png" alt="Adress-icon" />
+          <img src="img/Address.png" alt="Adress-icon" />
           <p>Adress:</p>
           <h5>
             Block 1, <br />
@@ -65,12 +65,12 @@
           </h5>
         </div>
         <div class="Phone-contact">
-          <img src="/img/phone.png" alt="phone-icon" />
+          <img src="img/phone.png" alt="phone-icon" />
           <h4>+2348061143232</h4>
           <h4>+2348138582004</h4>
         </div>
         <div class="instra-contact">
-          <img src="/img/instagram.png" alt="instagram-icon" />
+          <img src="img/instagram.png" alt="instagram-icon" />
           <ul>
             <li>
               <a
@@ -89,7 +89,7 @@
           </ul>
         </div>
         <div class="Facebook-contact">
-          <img src="/img/facebook.gif" alt="facebook-icon" />
+          <img src="img/facebook.gif" alt="facebook-icon" />
           <br />
           <br />
           <a
@@ -99,7 +99,7 @@
           >
         </div>
         <div class="Twitter-contact">
-          <img src="/img/twitter.png" alt="twitter-icon" />
+          <img src="img/twitter.png" alt="twitter-icon" />
           <br />
           <br />
           <a
@@ -109,7 +109,7 @@
         </div>
       </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
   <footer>
     <h6>Contain US</h6>
