--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           </div>
         </div>
       </div>
+      <div class="mobile-header"></div>
 
       <div class="first_partB">
         <div class="main-message">
